--- a/index.html
+++ b/index.html
@@ -1,57 +1,82 @@
 	<!DOCTYPE html>
 	<html lang="en" class="no-js">
 	<head>
-		<meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
-		<meta prefix="og: http://ogp.me/ns#" property="og:title" content="smartwatch 4U">
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="canonical" href="https://www.smartwatch4u.com/">
-		<!-- Favicon-->
-		<link href="img/favicon.ico" rel="shortcut icon" >
-		<link href="img/fav2.png" rel="apple-touch-icon">
-		<!-- Author Meta -->
-		<meta name="author" content="codepixer">
-		<!-- Meta Description -->
-		<meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
-		<meta name="robots" content="index, follow"> <!-- for search engine indexing -->
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>smartwatch 4U - Wear the Future</title>
-		
-<!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://www.smartwatch4u.com/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="smartwatch 4U">
-<meta property="og:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
-<meta property="og:image" content="/img/c12.jpg">
+  <!-- Charset and Viewport -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="smartwatch4u.com">
-<meta property="twitter:url" content="https://www.smartwatch4u.com/">
-<meta name="twitter:title" content="smartwatch 4U">
-<meta name="twitter:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
-<meta name="twitter:image" content="/img/c12.jpg">
+  <!-- Site Title -->
+  <title>smartwatch 4U - Wear the Future</title>
 
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.smartwatch4u.shop/">
 
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/nice-select.css">					
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
-			<meta name="google-site-verification" content="F_HLbuP3rNbLkYFa_axXe2LGtLCK1UhyZid4MP4cgyI" />
-		</head>
+  <!-- SEO Meta Tags -->
+  <meta name="author" content="Smartwatch4U Team">
+  <meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
+  <meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph Meta Tags -->
+  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Smartwatch 4U">
+  <meta property="og:url" content="https://www.smartwatch4u.shop/">
+  <meta property="og:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
+  <meta property="og:image" content="https://www.smartwatch4u.shop/img/c12.jpg">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="smartwatch4u.shop">
+  <meta property="twitter:url" content="https://www.smartwatch4u.shop/">
+  <meta name="twitter:title" content="Smartwatch 4U">
+  <meta name="twitter:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
+  <meta name="twitter:image" content="https://www.smartwatch4u.shop/img/c12.jpg">
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="F_HLbuP3rNbLkYFa_axXe2LGtLCK1UhyZid4MP4cgyI" />
+
+  <!-- Favicon -->
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href="img/fav2.png" rel="apple-touch-icon">
+
+  <!-- Fonts & CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/linearicons.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/nice-select.css">
+  <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- ✅ JSON-LD SCHEMA for AI & Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Smartwatch4u",
+    "url": "https://www.smartwatch4u.shop/",
+    "description": "Smartwatch4U showcases the latest and top-rated smartwatches available on Amazon. Explore comparisons, reviews, and affiliate deals to find your perfect smartwatch.",
+    "inLanguage": "en",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.smartwatch4u.shop/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Smartwatch4U",
+      "url": "https://www.smartwatch4u.shop/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.smartwatch4u.shop/img/logo.png"
+      }
+    }
+  }
+  </script>
+</head>
+
 		<body>
 
 			  <header id="header" id="home">
@@ -79,6 +104,7 @@
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
 			    </div>
+					
 			  </header><!-- #header -->
 
 
